--- a/design-thinking/practica5.html
+++ b/design-thinking/practica5.html
@@ -64,15 +64,24 @@
                 <div class="think__details__info">
                     <p class="think__details__info__title">Descomposición Funcional</p>
                     <p class="think__details__info__cont"></p>
-                     <a href="https://drive.google.com/file/d/1TmrF-JHLkRz-yMFOVZ_WixS0xNnwRbQA/view?usp=sharing" target="_blank" class="think__details__extra__description">Documento - Descomposición Funcional</a>
+                     <a href="https://drive.google.com/open?id=1WPD6Z_P-yGHSxLAO07x7mDOvJII2FqZL" target="_blank" class="think__details__extra__description">Documento - Descomposición Funcional</a>
                 </div>
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">Diagrama Gantt para ejecutar la implementación del proyecto</p>
-                     
-                    <p href="https://drive.google.com/open?id=1gIZci2cZil2dQgoxU8Mzg8u1Koy4jKkK">Documento - Diagrama 1</a>
-                    <p href="https://drive.google.com/open?id=1_YKe5EolRq5oZmChM9fudBtE9s7riIIv">Documento - Diagrama 2</a>
-                    <p href="https://drive.google.com/open?id=1D8LYVg0PIn1gsBAwhb349qSwex6X2cnl">Documento - Diagrama 3</a>
-                </div>
+                    <p class="think__details__extra__title">Diagrama Gantt para ejecutar la implementación del proyecto </p>
+                    <p class="think__details__extra__description">Diagrama Gantt para ejecutar la implementación del proyecto 1</p>
+
+                    <a href="https://drive.google.com/open?id=1gIZci2cZil2dQgoxU8Mzg8u1Koy4jKkK">Documento - Diagrama 1</a>
+
+                     <p class="think__details__extra__description">Diagrama Gantt para ejecutar la implementación del proyecto 2</p>
+
+                    <a href="https://drive.google.com/open?id=1_YKe5EolRq5oZmChM9fudBtE9s7riIIv">Documento - Diagrama 2</a> 
+
+                     <p class="think__details__extra__description">Diagrama Gantt para ejecutar la implementación del proyecto 3</p>
+
+                    <a href="https://drive.google.com/open?id=1D8LYVg0PIn1gsBAwhb349qSwex6X2cnl">Documento - Diagrama 3</a>
+                    </div>
+
+
                 <div class="think__details__extra">
                     <p class="think__details__extra__title"> Costos del Proyecto</p>
                  
