--- a/en/final-project/semana2.html
+++ b/en/final-project/semana2.html
@@ -67,9 +67,13 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">  We publish the proposal on the website: </p>
-                    <div class="think__details__extra">                    
+                      </div>
+            
+                 </div><div class="think__details__extra">                     
                     <p class="think__details__info__title">a.   We describe the design where the project is flexible to changes using parametric (Video published on YouTube or Vmeo).</p>
                     <img src="../../img/parametricos.jpeg" alt="">
+                     </div>  
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/828oq_oSNAo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                    
                     <p class="think__details__info__title">b.    We publish the links to download the generated files (the 2D / 3D design and the report in word)</p>
                     <div class="think__details__extra">
