--- a/en/final-project/semana3.html
+++ b/en/final-project/semana3.html
@@ -68,14 +68,15 @@
                 </div>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/lRdmfnesFbE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">Document - 2D and 3D diagram</p>
-                    <p>This document shows the graphics of a two-dimensional project that consists of a security system for which we have used the tool "FZZ" as a means to demonstrate the implementation.</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/a/tecsup.edu.pe/file/d/11rheWf4l_ERvf0U8q5jPEm75jaxn6xG_/view?usp=sharing" target="_blank">Document - 2D and 3D diagram</a></div>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Files - 2D and 3D Diagram</p>
-                    <p>This document contains the two-dimensional file in which the corresponding diagram was made, which reflects the final implementation of the project implementation of a security system.</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/open?id=1p4fRTwta_wBYXIyBpUkWmHSEy8_nh5m0" target="_blank">Files - 2D and 3D Diagram</a></div>
+                     <div class="think__details__extra">
+                    <p class="think__details__extra__title">Enlaces para descargar los archivos</p>
+                   
+                    <p class="think__details__extra__description">EL presente archivo muestra el modelo 1 (Rhinoceros).</p>
+                    <a href="https://drive.google.com/open?id=1BQIv8n-E34pLTMlAiaWvr0esqItSdo49" target="_blank">Hacer click aqui para descargar.</a>
+                    <p class="think__details__extra__description">EL presente archivo muestra el modelo 2 (Rhinoceros).</p>
+                    <a href="https://drive.google.com/open?id=1GmNWqKgLPjaMbeUt935QGRYTZxZJcOOS" target="_blank">Hacer click aqui para descargar.</a>
+                    <p class="think__details__extra__description">EL presente archivo muestra el modelo 3 (Rhinoceros).</p>
+                    <a href="https://drive.google.com/open?id=1Ogh8IhzTtyM7EYIZ3s2cj9Zx8Xx4qTUT" target="_blank">Hacer click aqui para descargar.</a>
                 </div>
             </div>
         </div>
@@ -84,7 +85,7 @@
             <div class="footer">
                 <div class="footer__licencia">
                     <p>Licencia:</p>
-                    <img src="../img/licencia.png" alt="">
+                    <img src="../img/licencia.jpg" alt="">
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
