--- a/en/final-project/semana5.html
+++ b/en/final-project/semana5.html
@@ -49,8 +49,8 @@
                 <h1>FINAL PRESENTATION</h1>
             </div>
             <div class="think__title__content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore officiis deleniti temporibus, recusandae et perferendis libero, eos quidem, maiores labore blanditiis laboriosam tempora architecto eaque velit consequatur quam odio hic!</p>
-            </div>
+                <p>This is how our lamp will be with its respective manuals to download and its packaging also designed in the laser cutter. </p>
+            </div> 
         </div>
 
         <div class="think">
@@ -62,14 +62,50 @@
                     <i class="icon-remote-control-streamline"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">100% Implementation and Operation</p>
-                    <p class="think__details__info__cont">In this document the operation of both the circuit carried out as well as the functioning of the camera will be shown both by means of the applications made and developed; as well as a video of the operation of it.</p>
+                    <p class="think__details__info__title">Implementation and Presentation of the Final Project</p>
+                    <p class="think__details__info__cont">This document will show the operation of the lamp, the additional elements of our lamp, the marketing side of our product and the videos with final finishes at the same time the exhibition of one of the participants explaining the product with one of our customer interviews .</p>
                 </div>
 
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">Document - 100% Implementation and Operation</p>
-                    <p>As one of the final passes of the work, the connection of the webcam was put into operation together with the operation of the servomotor simulation, as well as in the development of the applications for each one; As the applications were made, there were difficulties in implementing the work with the possibility of transmitting the audio.</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/open?id=1QgpgGu5F5JczXJwdXB2NKXQi1G5aTCdd" target="_blank">Document - 100% Implementation and Operation</a></div>
+                    <p class="think__details__extra__title">Manual and file in Corel Draw of the Project</p>
+                    <p class="think__details__extra__description">As one of the final passes of the work of the Operation Manual was placed and a file to download the final project .</p>
+                    <a href="https://drive.google.com/file/d/1QgpgGu5F5JczXJwdXB2NKXQi1G5aTCdd/view?usp=sharing" target="_blank">Document - 100% Implementation and Operation</a>
+                    </div>
+                       </div>
+                   
+                  <div class="think__details__extra">
+                    <p class="think__details__extra__title">ADVERTISING BANNER</p>
+                  
+                    <img src="../../img/baner.jpg" alt="">
+                </div>
+                     </div>
+                      </div>
+                       </div>
+
+
+                <div class="think">
+            <div class="think__img">
+                    <iframe width="800" height="315" src="https://www.youtube.com/embed/01BAX3S0gmg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                     </div>
+                       </div>
+                   </div>
+
+
+                <div class="think">
+            <div class="think__img">
+                 <iframe width="800" height="315" src="https://www.youtube.com/embed/JcjrDZ4P-9w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                     </div>
+                       </div>
+                       </div>
+                   </div>
+
+
+                <div class="think">
+            <div class="think__img">
+                 <iframe width="800" height="315" src="https://www.youtube.com/embed/G3Wt2qGWxtE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                     </div>
+                     </div>
+
                 </div>
             </div>
         </div>
@@ -78,11 +114,11 @@
         <div class="footer">
             <div class="footer__licencia">
                 <p>License:</p>
-                <img src="../../img/licencia.png" alt="">
+                <img src="../../img/licencia.jpg" alt="">
             </div>
             <div class="footer__copy">
                 <img src="../../img/fablab.png" alt="">
-                <p>&copy; 2018 - Designed by: <a href="mailto:gerson.carrasco@tecsup.edu.pe">Tec. Gerson Carrasco Torres./a></p>
+                <p>&copy; 2018 - Designed by: <a href="mailto:doris.zegarra@tecsup.edu.pe">Doris Cristina Zegarra Quispe.</a></p>
             </div>
         </div>
     </footer>
