--- a/proyecto-final/semana5.html
+++ b/proyecto-final/semana5.html
@@ -26,8 +26,8 @@
                     <li><a href="../design-thinking/practica2.html">2. Taller de design thinking</a></li>
                     <li><a href="../design-thinking/practica3.html">3. Empatizar</a></li>
                     <li><a href="../design-thinking/practica4.html">4. Definir</a></li>
-                    <li><a href="../design-thinking/practica5.html">5. Idear</a></li>
-                    <li><a href="../design-thinking/practica6.html">6. Prototipo y testeo</a></li>
+                    <li><a href="../design-thinking/practica5.html">5 Prototipar</a></li>
+                    <li><a href="../design-thinking/practica6.html">6. Testear </a></li>
                 </ul>
              </li>
             <li><a href="../finalProject.html">Proyecto de Fabricación Digital</a>
@@ -49,7 +49,7 @@
                 <h1>PRESENTACION FINAL</h1>
             </div>
             <div class="think__title__content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore officiis deleniti temporibus, recusandae et perferendis libero, eos quidem, maiores labore blanditiis laboriosam tempora architecto eaque velit consequatur quam odio hic!</p>
+                <p>Es así como quedará nuestra lámpara con sus respectivos manuales para descargar y su empaquetado también diseñado en la cortadora laser. </p>
             </div> 
         </div>
 
@@ -62,14 +62,51 @@
                     <i class="icon-remote-control-streamline"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Implementación y Presentación del Proyecto Final3</p>
-                    <p class="think__details__info__cont">En este documento se mostrara el funcionamiento tanto del circuito realizado asi como el funcionamiento de la cámara ambos por medio de las aplicaciones realizadas y desarrolladas; así como un video del funcionamiento de la misma.</p>
+                    <p class="think__details__info__title">Implementación y Presentación del Proyecto Final</p>
+                    <p class="think__details__info__cont">En este documento se mostrara el funcionamiento de la lámpara los elementos adicionales de nuestra lámpara , el lado de marketing de nuestro producto y los videos con acabados finales a la vez la exposición de uno de los participantes explicando el producto con uno de nuestras entrevista al cliente.</p>
                 </div>
 
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">Documento - Implementación y Funcionamiento al 100%</p>
-                    <p class="think__details__extra__description">Como una de los pases finales  del trabajo de  se puso en funcionamiento la conexión de la cámara web conjuntamente con el funcionamiento de la simulación del servomotor ,así como también en desarrollo de las aplicaciones para cada uno ; así como se puso realizar las aplicaciones se presentó dificultades al implementar el trabajo con la posibilidad de transmitir el audio .</p>
+                    <p class="think__details__extra__title">Manual y archivo en Corel Draw del Proyecto </p>
+                    <p class="think__details__extra__description">Como una de los pases finales  del trabajo de se colocó el Manual de operación y un archivo para poder descargar del proyecto final .</p>
                     <a href="https://drive.google.com/file/d/1QgpgGu5F5JczXJwdXB2NKXQi1G5aTCdd/view?usp=sharing" target="_blank">Documento - Implementación y Funcionamiento al 100%</a>
+                      </div>
+                       </div>
+                   
+                  <div class="think__details__extra">
+                    <p class="think__details__extra__title">BANNER PUBLICITARIO </p>
+                  
+                    <img src="../img/baner.jpg" alt="">
+                </div>
+                     </div>
+                      </div>
+                       </div>
+
+
+                <div class="think">
+            <div class="think__img">
+                    <iframe width="800" height="315" src="https://www.youtube.com/embed/01BAX3S0gmg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                     </div>
+                       </div>
+                   </div>
+
+
+                <div class="think">
+            <div class="think__img">
+                 <iframe width="800" height="315" src="https://www.youtube.com/embed/JcjrDZ4P-9w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                     </div>
+                       </div>
+                       </div>
+                   </div>
+
+
+                <div class="think">
+            <div class="think__img">
+                 <iframe width="800" height="315" src="https://www.youtube.com/embed/G3Wt2qGWxtE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                     </div>
+
+
+
                 </div>
             </div>
         </div>
@@ -78,7 +115,7 @@
             <div class="footer">
                 <div class="footer__licencia">
                     <p>Licencia:</p>
-                    <img src="../img/licencia.png" alt="">
+                    <img src="../img/licencia.jpg" alt="">
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
