--- a/proyecto-final/semana1.html
+++ b/proyecto-final/semana1.html
@@ -26,8 +26,8 @@
                     <li><a href="../design-thinking/practica2.html">2. Taller de design thinking</a></li>
                     <li><a href="../design-thinking/practica3.html">3. Empatizar</a></li>
                     <li><a href="../design-thinking/practica4.html">4. Definir</a></li>
-                    <li><a href="../design-thinking/practica5.html">5. Idear</a></li>
-                    <li><a href="../design-thinking/practica6.html">6. Prototipo y testeo</a></li>
+                    <li><a href="../design-thinking/practica5.html">5 Prototipar</a></li>
+                    <li><a href="../design-thinking/practica6.html">6. Testear </a></li>
                 </ul>
              </li>
             <li><a href="../finalProject.html">Proyecto de Fabricación Digital</a>
