--- a/proyecto-final/semana2.html
+++ b/proyecto-final/semana2.html
@@ -26,8 +26,8 @@
                     <li><a href="../design-thinking/practica2.html">2. Taller de design thinking</a></li>
                     <li><a href="../design-thinking/practica3.html">3. Empatizar</a></li>
                     <li><a href="../design-thinking/practica4.html">4. Definir</a></li>
-                    <li><a href="../design-thinking/practica5.html">5. Idear</a></li>
-                    <li><a href="../design-thinking/practica6.html">6. Prototipo y testeo</a></li>
+                    <li><a href="../design-thinking/practica5.html">5 Prototipar</a></li>
+                    <li><a href="../design-thinking/practica6.html">6. Testear </a></li>
                 </ul>
              </li>
             <li><a href="../finalProject.html">Proyecto de Fabricación Digital</a>
@@ -73,10 +73,13 @@
                  </div><div class="think__details__extra">                    
                          <p class="think__details__info__title">a.   Describimos el diseño donde el proyecto es flexible a los cambios utilizando paramétricos (Video publicado en Youtube o Vmeo).</p>
                           <img src="../img/parametricos.jpeg" alt="">
+                           </div>    <iframe width="560" height="315" src="https://www.youtube.com/embed/828oq_oSNAo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+
                    
                             <p class="think__details__info__title">b.    Publicamos los enlaces para descargar los archivos generados (el diseño 2D /3D y el informe en word)</p>
 
-                        </div>
+                       
 
                     <div class="think__details__extra">
                     <p class="think__details__extra__title">Enlaces para descargar los archivos</p>
