--- a/proyecto-final/semana3.html
+++ b/proyecto-final/semana3.html
@@ -26,8 +26,8 @@
                     <li><a href="../design-thinking/practica2.html">2. Taller de design thinking</a></li>
                     <li><a href="../design-thinking/practica3.html">3. Empatizar</a></li>
                     <li><a href="../design-thinking/practica4.html">4. Definir</a></li>
-                    <li><a href="../design-thinking/practica5.html">5. Idear</a></li>
-                    <li><a href="../design-thinking/practica6.html">6. Prototipo y testeo</a></li>
+                    <li><a href="../design-thinking/practica5.html">5 Prototipar</a></li>
+                    <li><a href="../design-thinking/practica6.html">6. Testear </a></li>
                 </ul>
              </li>
             <li><a href="../finalProject.html">Proyecto de Fabricación Digital</a>
@@ -70,8 +70,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/lRdmfnesFbE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                     <div class="think__details__extra">
                     <p class="think__details__extra__title">Enlaces para descargar los archivos</p>
-                    <p class="think__details__extra__description">EL presente archivo muestra el informe sobre los posibles modelos.</p>
-                    <a href="https://drive.google.com/open?id=1c6GL5uFuWMlMZwfXWuanqRICBD7KaxTk" target="_blank">Hacer click aqui para descargar (Word).</a>
+                   
                     <p class="think__details__extra__description">EL presente archivo muestra el modelo 1 (Rhinoceros).</p>
                     <a href="https://drive.google.com/open?id=1BQIv8n-E34pLTMlAiaWvr0esqItSdo49" target="_blank">Hacer click aqui para descargar.</a>
                     <p class="think__details__extra__description">EL presente archivo muestra el modelo 2 (Rhinoceros).</p>
@@ -88,7 +87,7 @@
             <div class="footer">
                 <div class="footer__licencia">
                     <p>Licencia:</p>
-                    <img src="../img/licencia.png" alt="">
+                    <img src="../img/licencia.jpg" alt="">
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
