--- a/en/final-project/semana5.html
+++ b/en/final-project/semana5.html
@@ -93,7 +93,7 @@
 
                 <div class="think">
             <div class="think__img">
-                 <iframe width="800" height="315" src="https://www.youtube.com/embed/JcjrDZ4P-9w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                 <iframe width="800" height="315" src="https://www.youtube.com/embed/Tlv49I1hjw0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                      </div>
                        </div>
                        </div>
@@ -103,8 +103,10 @@
                 <div class="think">
             <div class="think__img">
                  <iframe width="800" height="315" src="https://www.youtube.com/embed/G3Wt2qGWxtE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                     </div>
-                     </div>
+                    
+                      <div class="think__details__info">
+                    <p class="think__details__info__title"> Final Product </p>
+                <img src="../../img/caja.jpg" alt="">
 
                 </div>
             </div>
