--- a/proyecto-final/semana5.html
+++ b/proyecto-final/semana5.html
@@ -106,7 +106,7 @@
                     <div class="think__details__info">
                     <p class="think__details__info__title">Producto final </p>
                     
-                <img src="../img/caja.jpg" alt="">
+                <img src="../img/maqueta.jpeg" alt="">
 
 
 
