--- a/proyecto-final/semana6.html
+++ b/proyecto-final/semana6.html
@@ -69,6 +69,9 @@
                     <a href="https://drive.google.com/open?id=1sTQRJaZkVYUStG_C8c4fTe_SedT1GQau" target="_blank">Hacer click para ver el archivo.</a>
                 </div>
         </div>
+
+        <div class="think">
+            <div class="think__img">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/mCnpIvNNvCU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
              <div class="think__details__info">
               </div>
