--- a/en/design-thinking/practica5.html
+++ b/en/design-thinking/practica5.html
@@ -72,17 +72,33 @@
                     <p href="https://drive.google.com/open?id=1gIZci2cZil2dQgoxU8Mzg8u1Koy4jKkK">Document - Diagram 1</a>
                     <p href="https://drive.google.com/open?id=1_YKe5EolRq5oZmChM9fudBtE9s7riIIv">Document - Diagram 2</a>
                     <p href="https://drive.google.com/open?id=1D8LYVg0PIn1gsBAwhb349qSwex6X2cnl">Document - Diagram 3</a>
-                </div>
+                 </div>
+                <div class="think__details__extra">
+                    <p class="think__details__extra__title">Gantt diagram to execute the project implementation </p>
+                    <p class="think__details__extra__description">Gantt diagram to execute the project implementation 1</p>
+
+                    <a href="https://drive.google.com/open?id=1gIZci2cZil2dQgoxU8Mzg8u1Koy4jKkK">Document - Diagram 1</a>
+
+                     <p class="think__details__extra__description">Gantt diagram to execute the project implementation 2</p>
+
+                    <a href="https://drive.google.com/open?id=1_YKe5EolRq5oZmChM9fudBtE9s7riIIv">Document - Diagram 2</a> 
+
+                     <p class="think__details__extra__description">Gantt diagram to execute the project implementation 3</p>
+
+                    <a href="https://drive.google.com/open?id=1D8LYVg0PIn1gsBAwhb349qSwex6X2cnl">Document - Diagram 3</a>
+                    </div>
+
+
                 <div class="think__details__extra">
                     <p class="think__details__extra__title"> Project costs</p>
                  
-                    <a href="https://drive.google.com/open?id=0B3CRuD1qG9O-NWNCT2NyUmRXbmhSSWxrTXh1dDFoVWRfaE5B">Excel- Costs</a>
+                    <a href="https://drive.google.com/open?id=0B3CRuD1qG9O-T09lTm1WdU8tb0dmRkt3NDJlbWpYWG4xa05N">Excel- Costs</a>
                 </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Campaña de Alto Impacto</p>
-                </div>
+               </div> <div class="think__details__extra">
+                    <p class="think__details__extra__title">HIGH IMPACT CAMPAIGN</p>
+                     </div>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/vuYVTYEOtAY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> </div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0RjHXFUMw7g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> </div>
              </div>
              <div class="think__details__extra">
                     <p class="think__details__extra__title">
