--- a/en/design-thinking/practica5.html
+++ b/en/design-thinking/practica5.html
@@ -65,14 +65,7 @@
                     <p class="think__details__info__title">Functional decomposition</p>
                    <p class="think__details__info__cont"></p>
                      <a href="https://drive.google.com/open?id=1gQ8CEJXzrqQalNFPl_tZIXKj6dCx_I1J" target="_blank" class="think__details__extra__description">Document - Functional Decomposition</a>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Gantt diagram to execute the project implementation</p>
-                     
-                    <p href="https://drive.google.com/open?id=1gIZci2cZil2dQgoxU8Mzg8u1Koy4jKkK">Document - Diagram 1</a>
-                    <p href="https://drive.google.com/open?id=1_YKe5EolRq5oZmChM9fudBtE9s7riIIv">Document - Diagram 2</a>
-                    <p href="https://drive.google.com/open?id=1D8LYVg0PIn1gsBAwhb349qSwex6X2cnl">Document - Diagram 3</a>
-                 </div>
+                
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Gantt diagram to execute the project implementation </p>
                     <p class="think__details__extra__description">Gantt diagram to execute the project implementation 1</p>
@@ -98,8 +91,7 @@
                     <p class="think__details__extra__title">HIGH IMPACT CAMPAIGN</p>
                      </div>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/0RjHXFUMw7g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> </div>
-             </div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vuYVTYEOtAY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
              <div class="think__details__extra">
                     <p class="think__details__extra__title">
                      </div>
@@ -113,7 +105,7 @@
             </div>
             <div class="footer__copy">
                 <img src="../../img/fablab.png" alt="">
-                <p>&copy; 2018 - Designed by: <a href="a href="mailto:gerson.carrasco@tecsup.edu.pe">Tec. Gerson Carrasco Torres.</a></p>
+                <p>&copy; 2018 - Designed by: <a href="a href="mailto:doris.zegarra@tecsup.edu.pe">Doris Cristina Zegarra Quispe.</a></p>
             </div>
         </div>
     </footer>
