--- a/en/design-thinking/practica6.html
+++ b/en/design-thinking/practica6.html
@@ -64,7 +64,7 @@
                 <div class="think__details__info">
                     <p class="think__details__info__title">  receiving mesh of the client and the team</p>
                      <p class="think__details__extra__description">The present document will give to know the questions and answers of the client that we gave him to appreciate our lamp and at the same time our point of view for the improvements..</p>
-                    <a href="https://drive.google.com/open?id=1NsWi346VTMLaxjC4EMY-FrBRzBsDgMqT" target="_blank">Click to see the file.</a>
+                    <a href="https://drive.google.com/open?id=1sTQRJaZkVYUStG_C8c4fTe_SedT1GQau">Click to see the file.</a>
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">  We publish the proposal on the website: </p>
@@ -85,7 +85,7 @@
             </div>
             <div class="footer__copy">
                 <img src="../../img/fablab.png" alt="">
-                <p>&copy; 2018 - Designed by: <a href="mailto:gerson.carrasco@tecsup.edu.pe">Tec. Gerson Carrasco Torres.</a></p>
+                <p>&copy; 2018 - Designed by: <a href="mailto:doris.zegarra@tecsup.edu.pe">Doris Cristina Zegarra Quispe.</a></p>
             </div>
         </div>
     </footer>
