--- a/en/final-project/semana6.html
+++ b/en/final-project/semana6.html
@@ -95,7 +95,7 @@ The present document will make known the questions and answers of the client tha
             </div>
             <div class="footer__copy">
                 <img src="../../img/fablab.png" alt="">
-                <p>&copy; 2018 - Designed by: <a href="mailto:gerson.carrasco@tecsup.edu.pe">Tec. Gerson Carrasco Torres.</a></p>
+                <p>&copy; 2018 - Designed by: <a href="mailto:doris.zegarra@tecsup.edu.pe">Doris Cristina Zegarra Quispe.</a></p>
             </div>
         </div>
     </footer>
