--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="design-thinking/practica3.html">3. Empatizar</a></li>
                     <li><a href="design-thinking/practica4.html">4. Definir</a></li>
                     <li><a href="design-thinking/practica5.html">5. Prototipar</a></li>
-                    <li><a href="design-thinking/practica6.html">6. Testar</a></li>
+                    <li><a href="design-thinking/practica6.html">6. Testear</a></li>
                 </ul>
              </li>
             <li><a href="finalProject.html">Proyecto de Fabricación Digital</a>
